--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="wrapper">
     <nav class="navbar">
         <div class="logo-container">
-            <img class="logo" src="images/logo.png" alt="Coffex Logo">
+            <img class="logo" src="logo.png" alt="Coffex Logo">
             <a href="home.html" class="logotext">Coffex</a>
             <span class="R">&#174;</span>
         </div>
@@ -33,7 +33,7 @@
 </header>
     <div class="circle">
         <a href="index.html"></a>
-            <img class="logo" src="images/logo.png" alt="Coffex Logo">
+            <img class="logo" src="logo.png" alt="Coffex Logo">
         </a>
     </div>
     <div class="title-panel">
