--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             </ul>
             <div class="header-logo-right">
                 <a href="home.html">
-                    <img src="images/logo.png" alt="Coffex Logo" class="circle-logo">
+                    <img src="logo.png" alt="Coffex Logo" class="circle-logo">
                 </a>
             </div>
         </nav>
