--- a/machines.html
+++ b/machines.html
@@ -26,7 +26,7 @@
             </ul>
             <div class="header-logo-right">
                 <a href="index.html">
-                    <img src="images/logo.png" alt="Coffex Logo" class="circle-logo">
+                    <img src="logo.png" alt="Coffex Logo" class="circle-logo">
                 </a>
             </div>
         </nav>
