--- a/machines.html
+++ b/machines.html
@@ -36,19 +36,19 @@
             <div class="container">
                 <div class="product-item">
                     <a href="nespresso.html">
-                        <img src="C:\Users\mehme\Desktop\Web\images\Nespresso_logo_(monogram_+_wordmark).svg" alt="за Nespresso">
+                        <img src="Nespresso_logo_(monogram_+_wordmark).svg" alt="за Nespresso">
                     </a>
                     <h2>за Nespresso<span class="R">&#174;</span></h2>
                 </div>
                 <div class="product-item">
                     <a href="dolcegusto.html">
-                        <img src="C:\Users\mehme\Desktop\Web\images\467_dolcegusto.webp" alt="за Dolce Gusto">
+                        <img src="467_dolcegusto.webp" alt="за Dolce Gusto">
                     </a>
                     <h2>за Dolce Gusto<span class="R">&#174;</span></h2>
                 </div>
                 <div class="product-item">
                     <a href="tassimo.html">
-                        <img src="C:\Users\mehme\Desktop\Web\images\download.png" alt="за Tassimo">
+                        <img src="download.png" alt="за Tassimo">
                     </a>
                     <h2>за Tassimo<span class="R">&#174;</span></h2>
                 </div>
