--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
                 <a href="#" class="logo">Coffex</a>
             </div>
             <ul class="nav-menu">
-                <li><a href="home.html">Начало</a></li>
+                <li><a href="index.html">Начало</a></li>
                 <li class="submenu">
                     <a href="machines.html">Кафемашини</a>
                     <ul class="dropdown">
@@ -28,7 +28,7 @@
                 <li><a href="contact.html" class="active">Контакти</a></li>
             </ul>
             <div class="header-logo-right">
-                <a href="home.html">
+                <a href="index.html">
                     <img src="logo.png" alt="Coffex Logo" class="circle-logo">
                 </a>
             </div>
