--- a/nespresso.html
+++ b/nespresso.html
@@ -28,7 +28,7 @@
             </ul>
             <div class="header-logo-right">
                 <a href="index.html">
-                    <img src="images/logo.png" alt="Coffex Logo" class="circle-logo">
+                    <img src="logo.png" alt="Coffex Logo" class="circle-logo">
                 </a>
             </div>
         </nav>
@@ -47,7 +47,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-1" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\starbucksr-caffe-verona-by-nespressor-10-kapsuli-65bce9fc12354_600x600.webp" alt="Starbucks Verona">
+                                            <img src="starbucksr-caffe-verona-by-nespressor-10-kapsuli-65bce9fc12354_600x600.webp" alt="Starbucks Verona">
                                             <span class="discount">15% off</span>
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
@@ -67,7 +67,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-2" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\res_0c1d7f0dd82478e844872d48e2bfc73b.webp" alt="Nespresso Chiaro">
+                                            <img src="res_0c1d7f0dd82478e844872d48e2bfc73b.webp" alt="Nespresso Chiaro">
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
 														<li><a href="#"><i class="fas fa-heart"></i></a></li>
@@ -84,7 +84,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-3" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\nespresso-volluto-decaffeinato-capsules-550x550.jpg.webp" alt="Nespresso Volluto">
+                                            <img src="nespresso-volluto-decaffeinato-capsules-550x550.jpg.webp" alt="Nespresso Volluto">
                                             <span class="discount">15% off</span>
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
@@ -103,7 +103,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-4" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\nespresso-kaffekapslen-premium-10-espresso-vanilla-1001.jpg" alt="Espresso Vanilla">
+                                            <img src="nespresso-kaffekapslen-premium-10-espresso-vanilla-1001.jpg" alt="Espresso Vanilla">
 												<span class="new">new</span>
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
@@ -121,7 +121,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-1" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\Garibaldi-Gusto-Dolce-Nespresso.jpg" alt="Garibaldi Gusto Dolce">
+                                            <img src="Garibaldi-Gusto-Dolce-Nespresso.jpg" alt="Garibaldi Gusto Dolce">
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
 														<li><a href="#"><i class="fas fa-heart"></i></a></li>
@@ -138,7 +138,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-2" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\espresso-collection-stick-ethiopia-big.jpg" alt="">
+                                            <img src="espresso-collection-stick-ethiopia-big.jpg" alt="">
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
 														<li><a href="#"><i class="fas fa-heart"></i></a></li>
@@ -155,7 +155,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-3" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\20210119_105250.jpg" alt="">
+                                            <img src="20210119_105250.jpg" alt="">
                                             <span class="discount">15% off</span>
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
@@ -174,7 +174,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-4" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\3631.png" alt="">
+                                            <img src="3631.png" alt="">
 												<span class="new">new</span>
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
