--- a/tassimo.html
+++ b/tassimo.html
@@ -47,7 +47,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-1" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\download (1).jpg" alt="">
+                                            <img src="download (1).jpg" alt="">
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
 														<li><a href="#"><i class="fas fa-heart"></i></a></li>
@@ -65,7 +65,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-2" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\tassimo_l_or_espresso_forza-640x640.jpg" alt="">
+                                            <img src="tassimo_l_or_espresso_forza-640x640.jpg" alt="">
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
 														<li><a href="#"><i class="fas fa-heart"></i></a></li>
@@ -82,7 +82,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-3" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\tassimo_marcilla_espresso_descafeinado-500x500.jpg" alt="">
+                                            <img src="tassimo_marcilla_espresso_descafeinado-500x500.jpg" alt="">
                                             <span class="discount">15% off</span>
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
@@ -101,7 +101,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-4" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\tassimo-jacobs-cafe-au-lait-800x600.jpg" alt="">
+                                            <img src="tassimo-jacobs-cafe-au-lait-800x600.jpg" alt="">
 												<span class="new">new</span>
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
@@ -119,7 +119,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-1" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\Tassimo-Jacobs-Cappuccino-Classico-1-600x600.jpg.webp" alt="">
+                                            <img src="Tassimo-Jacobs-Cappuccino-Classico-1-600x600.jpg.webp" alt="">
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
 														<li><a href="#"><i class="fas fa-heart"></i></a></li>
@@ -136,7 +136,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-2" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\6021646404801TassimoJacobsCaffeCremaClassicoXL800x600.webp" alt="">
+                                            <img src="6021646404801TassimoJacobsCaffeCremaClassicoXL800x600.webp" alt="">
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
 														<li><a href="#"><i class="fas fa-heart"></i></a></li>
@@ -153,7 +153,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-3" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\tassimo-latte-caramel-800x600.jpg" alt="">
+                                            <img src="tassimo-latte-caramel-800x600.jpg" alt="">
                                             <span class="discount">15% off</span>
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
@@ -172,7 +172,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-4" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\tassimo-cafe-long-aromatique-caps-cena-600x600.jpg.webp" alt="">
+                                            <img src="tassimo-cafe-long-aromatique-caps-cena-600x600.jpg.webp" alt="">
 												<span class="new">new</span>
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
