--- a/dolcegusto.html
+++ b/dolcegusto.html
@@ -55,7 +55,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-1" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\kafe-kapsuli-nescafe-dolce-gusto---latte-macchiato--8-napitki-30.jpg" alt="">
+                                            <img src="kafe-kapsuli-nescafe-dolce-gusto---latte-macchiato--8-napitki-30.jpg" alt="">
                                             <span class="discount">15% off</span>
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
@@ -75,7 +75,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-2" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\starbucks-cappuccino-dolce-gusto-kapsuli-12-br-65c4d6fd5b8b6_600x600.webp" alt="">
+                                            <img src="starbucks-cappuccino-dolce-gusto-kapsuli-12-br-65c4d6fd5b8b6_600x600.webp" alt="">
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
 														<li><a href="#"><i class="fas fa-heart"></i></a></li>
@@ -92,7 +92,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-3" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\flat white_01 single pack_stuff_45062__pic2_1432910753.jpg" alt="">
+                                            <img src="flat white_01 single pack_stuff_45062__pic2_1432910753.jpg" alt="">
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
 														<li><a href="#"><i class="fas fa-heart"></i></a></li>
@@ -109,7 +109,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-4" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\nescafer-dolce-gustor-lungo-magnum-kafe-kapsuli-30-napitki-image_61923fad323a9_800x800.jpeg" alt="">
+                                            <img src="nescafer-dolce-gustor-lungo-magnum-kafe-kapsuli-30-napitki-image_61923fad323a9_800x800.jpeg" alt="">
 												<span class="new">new</span>
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
@@ -127,7 +127,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-1" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\images.jpg" alt="">
+                                            <img src="images.jpg" alt="">
                                             <span class="discount">15% off</span>
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
@@ -146,7 +146,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-2" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\BUONDI_MAGNUM_01 SINGLE PACK.jpg" alt="">
+                                            <img src="BUONDI_MAGNUM_01 SINGLE PACK.jpg" alt="">
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
 														<li><a href="#"><i class="fas fa-heart"></i></a></li>
@@ -163,7 +163,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-3" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\08445290422149_C1C1_s01.png" alt="">
+                                            <img src="08445290422149_C1C1_s01.png" alt="">
                                             <span class="discount">15% off</span>
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
@@ -182,7 +182,7 @@
 						<div class="col-md-6 col-lg-4 col-xl-3">
 								<div id="product-4" class="single-product">
 										<div class="part-1">
-                                            <img src="C:\Users\mehme\Desktop\Web\images\1275new-250x250.jpg" alt="">
+                                            <img src="1275new-250x250.jpg" alt="">
 												<span class="new">new</span>
 												<ul>
 														<li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
